// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadMoreText should create four breakpoints if text does not fit in the forth breakpoint boundaries 1`] = `
<p>
  <span
    className=""
  >
    Succulent, juicy and always delicious, chicken breasts are a versatile meat that compliment a variety of cuisines. A fir
  </span>
  <span
    className="screenSize1"
  >
    m fridge favourite, chicken breasts are easy 
  </span>
  <span
    className="screenSize2"
  >
    to cook and work in everything from sizzling 
  </span>
  <span
    className="screenSize3"
  >
    stir fries and warming curries to soups and sandwiches. So, whether you wan
  </span>
  <span
    className="screenSize4"
  >
    t to dice it, fry it or find a new way to try it - we’ve got the best chicken breast recipes to tickle your taste buds. Get the most out of this lean meat and learn new cooking techniques to enhance the flavour. Our chicken breast recipes include asian-inspired stir fries, where the meat is hit first to tenderise it, as well as firm staples like stringy pulled chicken in a juicy poutine sauce. It may be a staple to your diet, but this is chicken like you’ve never tasted before.
  </span>
  <span
    className="readMore4"
  >
    … 
    <a
      href="#"
      onClick={[Function]}
    >
      Read more
    </a>
  </span>
</p>
`;

exports[`ReadMoreText should create one breakpoint if text does not fit in the first breakpoint boundaries 1`] = `
<p>
  <span
    className=""
  >
    Succulent, juicy and always delicious, chicken breasts are a versatile meat that compliment a variety of cuisines. A fir
  </span>
  <span
    className="screenSize1"
  >
    m fridge favourite, chicken br
  </span>
  <span
    className="readMore1"
  >
    … 
    <a
      href="#"
      onClick={[Function]}
    >
      Read more
    </a>
  </span>
</p>
`;

exports[`ReadMoreText should create three breakpoints if text does not fit in the third breakpoint boundaries 1`] = `
<p>
  <span
    className=""
  >
    Succulent, juicy and always delicious, chicken breasts are a versatile meat that compliment a variety of cuisines. A fir
  </span>
  <span
    className="screenSize1"
  >
    m fridge favourite, chicken breasts are easy 
  </span>
  <span
    className="screenSize2"
  >
    to cook and work in everything from sizzling 
  </span>
  <span
    className="screenSize3"
  >
    stir fries and warming curries to soups 
  </span>
  <span
    className="readMore3"
  >
    … 
    <a
      href="#"
      onClick={[Function]}
    >
      Read more
    </a>
  </span>
</p>
`;

exports[`ReadMoreText should create two breakpoints if text does not fit in the second breakpoint boundaries 1`] = `
<p>
  <span
    className=""
  >
    Succulent, juicy and always delicious, chicken breasts are a versatile meat that compliment a variety of cuisines. A fir
  </span>
  <span
    className="screenSize1"
  >
    m fridge favourite, chicken breasts are easy 
  </span>
  <span
    className="screenSize2"
  >
    to cook and work in everything from
  </span>
  <span
    className="readMore2"
  >
    … 
    <a
      href="#"
      onClick={[Function]}
    >
      Read more
    </a>
  </span>
</p>
`;
